# orcahand_description

./: .gitignore  CMakeLists.txt  README.md  launch_combined.py  launch_left.py  launch_right.py  mesh_utils.py  orcahand_left.mjcf  orcahand_left_extended.mjcf  orcahand_right.mjcf  orcahand_right_extended.mjcf  package.xml  scene.xml  scene_combined.xml  scene_combined_extended.xml  scene_left.xml  scene_left_extended.xml  scene_right.xml  scene_right_extended.xml
.github/: CODEOWNERS
.github/workflows/: test-on-pr.yml
assets/left/collision/: left_collision_index_ip.stl  left_collision_index_pp_skin.stl  left_collision_pinky_pp.stl  left_collision_ring_pp_skin.stl  left_collision_thumb_dp_skin.stl  left_collision_thumb_pp.stl  left_collision_tower_hull.stl  left_collision_tower_main.stl  left_collision_tower_u2d2.stl
assets/left/visual/: left_visual_pinky_pp_skin.stl  left_visual_ring_pp_skin.stl  left_visual_tower_fans.stl  left_visual_tower_hull.stl  left_visual_tower_text.stl
assets/mjcf/: options.xml  scene.xml
combined/: orcahand_combined.mjcf  orcahand_combined_extended.mjcf  scene_combined.xml  scene_combined_extended.xml
launch/: orcahand.launch.py
left/: orcahand_left.mjcf  orcahand_left_extended.mjcf  scene_left.xml  scene_left_extended.xml
meshes/left/collision/: collision_index_pp_skin.stl  collision_middle_pp.stl  collision_palm_skin.stl  collision_pinky_mp.stl  collision_pinky_pp_skin.stl  collision_tower_fans.stl
meshes/left/visual/: visual_index_ip.stl  visual_index_pp_skin.stl  visual_middle_pp.stl  visual_palm_skin.stl  visual_thumb_dp_skin.stl  visual_thumb_ip.stl  visual_thumb_ip_skin.stl  visual_thumb_pp.stl  visual_tower_camera.stl  visual_tower_fans.stl
models/: orcahand_left.mjcf  orcahand_left_extended.mjcf  orcahand_right.mjcf  orcahand_right_extended.mjcf
models/mjcf/: orcahand_left.mjcf  orcahand_left_extended.mjcf  orcahand_right.mjcf  orcahand_right_extended.mjcf
models/urdf/: orcahand_left.urdf  orcahand_left_extended.urdf  orcahand_right.urdf  orcahand_right_extended.urdf
right/: orcahand_right.mjcf  orcahand_right_extended.mjcf  scene_right.xml  scene_right_extended.xml
rviz/: config.rviz  ros1.rviz
tests/: test_mjcf.py  test_urdf.py
utils/: mesh_utils.py  placement.py  utils_requirements.txt
v1/: scene_combined.xml  scene_combined_extended.xml  scene_left_extended.xml  scene_right.xml  scene_right_extended.xml
v2/: scene_combined.xml  scene_left.xml  scene_right.xml
(+50 files in other folders)
